<resources>
    <string name="app_name">Beneficiaries List</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign up</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_pwd">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">ನಿಮ್ಮೊoದಿಗೆ</string>
    <string name="wel1">ಬದುಕಿನ ಚಲನೆಯಲ್ಲಿ</string>
    <string name="wel2">ಒಳ್ಳೆಯತನದೊoದಿಗೆ ಒಟ್ಟಾಗಿ ಸಾಗೊಣ.</string>
    <string name="wel3">ಜೊತೆಯಾಗಿದ್ದಕ್ಕೆ ಧನ್ಯವಾದಗಳು.</string>
    <string name="wel4">ಸಲಹೆ, ಪ್ರೋತ್ಸಾಹ ಹಾಗೂ ಮಾರ್ಗದರ್ಶನದ</string>
    <string name="wel5">ನಿರೀಕ್ಷೆಯಲ್ಲಿ...</string>
    <string name="wel6">ಸದಾ ನಿಮ್ಮೊoದಿಗೆ</string>
    <string name="name">ಪಿ. ರಾಜೀವ್</string>
    <string name="tex">ಬದುಕಿನ ಚಲನೆಯಲ್ಲಿ ಒಳ್ಳೆಯತನದೊoದಿಗೆ ಒಟ್ಟಾಗಿ ಸಾಗೊಣ. \nಜೊತೆಯಾಗಿದ್ದಕ್ಕೆ ಧನ್ಯವಾದಗಳು. \n\nಸಲಹೆ, ಪ್ರೋತ್ಸಾಹ ಹಾಗೂ ಮಾರ್ಗದರ್ಶನದ ನಿರೀಕ್ಷೆಯಲ್ಲಿ...</string>
    <string name="benefit">Benefit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="village">Village</string>
    <string name="ward">Ward/Booth Number</string>
    <string name="epic">EPIC</string>
    <string name="name_">Name</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
</resources>
