<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <android.support.constraint.Guideline
        android:id="@+id/gl1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.constraint.Guideline
        android:id="@+id/gl7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_village"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/village"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl2"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_village"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gl2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="parent">
    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <TextView
        android:id="@+id/tv_ward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ward"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl3"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl2" />

    <EditText
        android:id="@+id/et_ward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:hint="@string/ward"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/gl3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/gl2" />
    <TextView
        android:id="@+id/tv_epic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/epic"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl4"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl3" />

    <EditText
        android:id="@+id/et_epic"
        android:layout_width="0dp"
        android:lines="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:hint="@string/epic"
        android:imeOptions="actionNext"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/gl4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/gl3" />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl5"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl4" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:hint="@string/name_"
        android:lines="1"
        android:imeOptions="actionNext"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/gl5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/gl4" />

    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mobile"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl6"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl5" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:lines="1"
        android:hint="@string/mobile_number"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/gl6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/gl5" />

    <TextView
        android:id="@+id/tv_benefit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/benefit"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl7"
        app:layout_constraintEnd_toStartOf="@+id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl6" />

    <EditText
        android:id="@+id/et_benefit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:hint="@string/benefit"
        android:imeOptions="actionDone"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/gl7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toTopOf="@+id/gl6" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/submit"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl7" />

</android.support.constraint.ConstraintLayout>